feat: Implement Privacy settings, replace brand text, remove Grok

--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -713,9 +713,9 @@
                         </svg>
                     </div>
                     <div>
-                        <div class="font-medium text-lg">Grok & Third-party Collaborators</div>
+                        <div class="font-medium text-lg">Third-party Collaborators</div>
                         <div class="text-sm text-gray-500">Allow your public data as well as your interactions, inputs,
-                            and results with Grok and xAI to be used for training and fine-tuning</div>
+                            and results to be used for training and fine-tuning</div>
                     </div>
                 </div>
                 <svg class="text-gray-400 group-hover:text-zynk transition" xmlns="http://www.w3.org/2000/svg"
