--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -135,7 +135,7 @@
                 </svg>
             </button>
 
-            <button
+            <button onclick="switchMenu('settingsAccessibility', 'settingsMain')"
                 class="w-full flex items-center justify-between p-4 rounded-xl hover:bg-white dark:hover:bg-[#121212] border border-transparent hover:border-gray-200 dark:hover:border-gray-800 transition group text-left">
                 <div class="flex items-center gap-4">
                     <div class="w-10 h-10 rounded-full bg-zynk/10 flex items-center justify-center text-zynk">
@@ -147,7 +147,7 @@
                                 d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z" />
                         </svg>
                     </div>
-                    <span class="font-medium text-lg">Accessibility, Display and Languages</span>
+                    <span class="font-medium text-lg">Accessibility, display and languages</span>
                 </div>
                 <svg class="text-gray-400 group-hover:text-zynk transition" xmlns="http://www.w3.org/2000/svg"
                     width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -888,6 +888,152 @@
                 <span class="font-medium text-lg">Email notifications</span>
                 <svg class="text-gray-400" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="9 18 15 12 9 6" />
+                </svg>
+            </button>
+        </div>
+
+        <!-- ACCESSIBILITY SUBMENU -->
+        <div id="settingsAccessibility" class="hidden space-y-2 transition-opacity duration-300 w-full max-w-2xl">
+            <div class="flex items-center gap-4 mb-2">
+                <button onclick="switchMenu('settingsMain', 'settingsAccessibility')"
+                    class="p-2 -ml-2 rounded-full hover:bg-gray-200 dark:hover:bg-gray-800 transition">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <line x1="19" y1="12" x2="5" y2="12" />
+                        <polyline points="12 19 5 12 12 5" />
+                    </svg>
+                </button>
+                <h2 class="text-2xl font-bold">Accessibility, display and languages</h2>
+            </div>
+            <p class="text-gray-500 mb-6 ml-14">Manage how Zynk content is displayed to you.</p>
+
+            <!-- Accessibility -->
+            <button
+                class="w-full flex items-center justify-between p-4 rounded-xl hover:bg-white dark:hover:bg-[#121212] border border-transparent hover:border-gray-200 dark:hover:border-gray-800 transition group text-left">
+                <div class="flex items-start gap-4">
+                    <div class="mt-1 text-gray-400">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M2.5 2v6h6M2.66 15.57a10 10 0 1 0 .57-8.38" />
+                        </svg>
+                    </div>
+                    <div>
+                        <div class="font-medium text-lg">Accessibility</div>
+                        <div class="text-sm text-gray-500">Manage aspects of your Zynk experience such as limiting color
+                            contrast and motion.</div>
+                    </div>
+                </div>
+                <svg class="text-gray-400 group-hover:text-zynk transition" xmlns="http://www.w3.org/2000/svg"
+                    width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="9 18 15 12 9 6" />
+                </svg>
+            </button>
+
+            <!-- Display -->
+            <button
+                class="w-full flex items-center justify-between p-4 rounded-xl hover:bg-white dark:hover:bg-[#121212] border border-transparent hover:border-gray-200 dark:hover:border-gray-800 transition group text-left">
+                <div class="flex items-start gap-4">
+                    <div class="mt-1 text-gray-400">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 20h9" />
+                            <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z" />
+                        </svg>
+                    </div>
+                    <div>
+                        <div class="font-medium text-lg">Display</div>
+                        <div class="text-sm text-gray-500">Manage your font size, color, and background. These settings
+                            affect all the Zynk accounts on this browser.</div>
+                    </div>
+                </div>
+                <svg class="text-gray-400 group-hover:text-zynk transition" xmlns="http://www.w3.org/2000/svg"
+                    width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="9 18 15 12 9 6" />
+                </svg>
+            </button>
+
+            <!-- Languages -->
+            <button
+                class="w-full flex items-center justify-between p-4 rounded-xl hover:bg-white dark:hover:bg-[#121212] border border-transparent hover:border-gray-200 dark:hover:border-gray-800 transition group text-left">
+                <div class="flex items-start gap-4">
+                    <div class="mt-1 text-gray-400">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="10" />
+                            <line x1="2" y1="12" x2="22" y2="12" />
+                            <path
+                                d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z" />
+                        </svg>
+                    </div>
+                    <div>
+                        <div class="font-medium text-lg">Languages</div>
+                        <div class="text-sm text-gray-500">Manage which languages are used to personalize your Zynk
+                            experience.</div>
+                    </div>
+                </div>
+                <svg class="text-gray-400 group-hover:text-zynk transition" xmlns="http://www.w3.org/2000/svg"
+                    width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="9 18 15 12 9 6" />
+                </svg>
+            </button>
+
+            <!-- Data usage -->
+            <button
+                class="w-full flex items-center justify-between p-4 rounded-xl hover:bg-white dark:hover:bg-[#121212] border border-transparent hover:border-gray-200 dark:hover:border-gray-800 transition group text-left">
+                <div class="flex items-start gap-4">
+                    <div class="mt-1 text-gray-400">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="18" y1="20" x2="18" y2="10" />
+                            <line x1="12" y1="20" x2="12" y2="4" />
+                            <line x1="6" y1="20" x2="6" y2="14" />
+                        </svg>
+                    </div>
+                    <div>
+                        <div class="font-medium text-lg">Data usage</div>
+                        <div class="text-sm text-gray-500">Limit how Zynk uses some of your network data on this device.
+                        </div>
+                    </div>
+                </div>
+                <svg class="text-gray-400 group-hover:text-zynk transition" xmlns="http://www.w3.org/2000/svg"
+                    width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="9 18 15 12 9 6" />
+                </svg>
+            </button>
+
+            <!-- Keyboard shortcuts -->
+            <button
+                class="w-full flex items-center justify-between p-4 rounded-xl hover:bg-white dark:hover:bg-[#121212] border border-transparent hover:border-gray-200 dark:hover:border-gray-800 transition group text-left">
+                <div class="flex items-start gap-4">
+                    <div class="mt-1 text-gray-400">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="2" y="4" width="20" height="16" rx="2" ry="2" />
+                            <line x1="6" y1="8" x2="6" y2="8" />
+                            <line x1="10" y1="8" x2="10" y2="8" />
+                            <line x1="14" y1="8" x2="14" y2="8" />
+                            <line x1="18" y1="8" x2="18" y2="8" />
+                            <line x1="6" y1="12" x2="6" y2="12" />
+                            <line x1="10" y1="12" x2="14" y2="12" />
+                            <line x1="18" y1="12" x2="18" y2="12" />
+                            <line x1="6" y1="16" x2="6" y2="16" />
+                            <line x1="10" y1="16" x2="10" y2="16" />
+                            <line x1="14" y1="16" x2="14" y2="16" />
+                            <line x1="18" y1="16" x2="18" y2="16" />
+                        </svg>
+                    </div>
+                    <div>
+                        <div class="font-medium text-lg">Keyboard shortcuts</div>
+                    </div>
+                </div>
+                <svg class="text-gray-400 group-hover:text-zynk transition" xmlns="http://www.w3.org/2000/svg"
+                    width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
                     <polyline points="9 18 15 12 9 6" />
                 </svg>
             </button>
