--- a/src/pages/more.html
+++ b/src/pages/more.html
@@ -33,7 +33,7 @@
     <aside class="hidden md:flex flex-col w-64 p-6 border-r border-gray-200 dark:border-gray-800">
         <h1 class="text-2xl font-bold text-zynk mb-8">ZYNK</h1>
 
-        <nav class="space-y-4 text-gray-300">
+        <nav class="space-y-4 text-gray-600 dark:text-gray-300">
             <a href="feed.html" class="block hover:text-zynk">Feed</a>
             <a href="explore.html" class="block hover:text-zynk">Explore</a>
             <a href="chat.html" class="block hover:text-zynk">Chat</a>
