--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -104,9 +104,22 @@
     <!-- MAIN AREA -->
     <main class="flex-1 max-w-2xl mx-auto border-x border-gray-200 dark:border-gray-800 min-h-screen">
 
+
+        <!-- COVER IMAGE -->
+        <div class="relative w-full h-40 bg-gray-200 dark:bg-gray-800 mb-6">
+            <img id="coverPreview" class="w-full h-full object-cover" src="" alt="" />
+
+            <label class="absolute bottom-3 right-3
+                        bg-black/70 text-white text-sm px-3 py-1
+                        rounded-lg cursor-pointer hover:bg-black/80 transition">
+                Change
+                <input type="file" accept="image/*" hidden onchange="uploadCover(event)">
+            </label>
+        </div>
+
         <!-- PROFILE HEADER -->
-        <div class="p-6 border-b border-gray-200 dark:border-gray-800">
-            <div class="flex justify-between items-start">
+        <div class="px-6 pb-6 border-b border-gray-200 dark:border-gray-800">
+            <div class="flex justify-between items-start -mt-16 relative z-10">
                 <img id="profileAvatar" src=""
                     class="w-24 h-24 rounded-full bg-gray-700 border-4 border-white dark:border-dark object-cover">
                 <button onclick="openEditModal()"
