--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -105,28 +105,42 @@
     <main class="flex-1 max-w-2xl mx-auto border-x border-gray-200 dark:border-gray-800 min-h-screen">
 
 
-        <!-- COVER IMAGE -->
-        <div class="relative w-full h-40 bg-gray-200 dark:bg-gray-800 mb-6">
-            <img id="coverPreview" class="w-full h-full object-cover" src="" alt="" />
 
-            <label class="absolute bottom-3 right-3
-                        bg-black/70 text-white text-sm px-3 py-1
-                        rounded-lg cursor-pointer hover:bg-black/80 transition">
-                Change
+        <!-- PROFILE HEADER (New Structure) -->
+        <div id="profileHeader" class="relative w-full h-48 bg-black mb-16">
+
+            <!-- COVER IMAGE (background) -->
+            <div id="coverBg" class="absolute inset-0 bg-cover bg-center transition-all duration-500"></div>
+
+            <!-- DARK OVERLAY -->
+            <div class="absolute inset-0 bg-black/30"></div>
+
+            <!-- EDIT COVER BUTTON -->
+            <label
+                class="absolute top-4 right-4 z-10 bg-black/60 hover:bg-black/80 text-white text-xs font-medium px-3 py-1.5 rounded-full cursor-pointer transition backdrop-blur-sm border border-white/10">
+                Edit Cover
                 <input type="file" accept="image/*" hidden onchange="uploadCover(event)">
             </label>
-        </div>
 
-        <!-- PROFILE HEADER -->
-        <div class="px-6 pb-6 border-b border-gray-200 dark:border-gray-800">
-            <div class="flex justify-between items-start -mt-16 relative z-10">
+            <!-- PROFILE IMAGE -->
+            <div class="absolute -bottom-12 left-6 z-20">
                 <img id="profileAvatar" src=""
-                    class="w-24 h-24 rounded-full bg-gray-700 border-4 border-white dark:border-dark object-cover">
+                    class="w-24 h-24 rounded-full border-[4px] border-gray-50 dark:border-dark object-cover bg-gray-700 shadow-xl">
+            </div>
+
+            <!-- EDIT PROFILE BUTTON (Preserved) -->
+            <div class="absolute -bottom-10 right-6 z-20">
                 <button onclick="openEditModal()"
-                    class="border border-gray-300 dark:border-gray-600 px-4 py-1.5 rounded-full font-semibold text-sm hover:bg-gray-100 dark:hover:bg-gray-800 transition">
+                    class="border border-gray-300 dark:border-gray-700 bg-white dark:bg-dark px-4 py-1.5 rounded-full font-semibold text-sm hover:bg-gray-50 dark:hover:bg-gray-800 transition shadow-sm">
                     Edit Profile
                 </button>
             </div>
+
+        </div>
+
+        <!-- PROFILE HEADER INFO -->
+        <div class="px-6 pb-6 border-b border-gray-200 dark:border-gray-800">
+
 
             <div class="mt-4">
                 <div class="flex items-center gap-2">
