--- a/src/pages/auth.html
+++ b/src/pages/auth.html
@@ -65,10 +65,10 @@
         <!-- FORM -->
         <form id="authForm" class="space-y-4">
 
-            <input type="text" placeholder="Username" class="w-full px-4 py-3 rounded-xl bg-gray-50 dark:bg-dark border border-gray-300 dark:border-gray-700
+            <input id="authUsername" type="text" placeholder="Username" class="w-full px-4 py-3 rounded-xl bg-gray-50 dark:bg-dark border border-gray-300 dark:border-gray-700
                focus:outline-none focus:border-zynk transition-colors text-gray-900 dark:text-white" />
 
-            <input type="password" placeholder="Password" class="w-full px-4 py-3 rounded-xl bg-gray-50 dark:bg-dark border border-gray-300 dark:border-gray-700
+            <input id="authPassword" type="password" placeholder="Password" class="w-full px-4 py-3 rounded-xl bg-gray-50 dark:bg-dark border border-gray-300 dark:border-gray-700
                focus:outline-none focus:border-zynk transition-colors text-gray-900 dark:text-white" />
 
             <button id="continueBtn" class="w-full bg-zynk text-black py-3 rounded-xl font-semibold
@@ -169,9 +169,18 @@
     <script>
         const continueBtn = document.getElementById('continueBtn');
         const loaderOverlay = document.getElementById('loaderOverlay');
+        const usernameInput = document.getElementById('authUsername');
+        const passwordInput = document.getElementById('authPassword');
 
         continueBtn.addEventListener('click', function (e) {
             e.preventDefault();
+
+            // Save to localStorage
+            const username = usernameInput.value.trim();
+            const password = passwordInput.value.trim();
+
+            if (username) localStorage.setItem('zynkUsername', username);
+            if (password) localStorage.setItem('zynkPassword', password);
 
             // Show loader
             loaderOverlay.classList.add('active');
